discussion/kv_engine/162166/162166_rev4_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-47308: Invoke MagmaKVStore callbacks in Primary domain

A number of Magma APIs which take callbacks need to wrap the callback
in 'primary' domain.

compactionCallBack optionally creates a context which gets freed inside
magma - hence delays switching to Primary until compactionCore

This change also updates use of WriteDocs (as per corresponding magma
change) so that the postWriteOperations is owned/modified/destroyed by
kv.

Change-Id: I0da36cf9a60de7255b0288661f6063323747e71c

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Jim Walker
Date: 2021-09-28 12:13:01.000000000
Message: 
Uploaded patch set 4.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-09-28 12:30:08.000000000
Message: 
Patch Set 4: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/34470/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-memory-tracking-proxy.cc:122:40:
error: use of undeclared identifier "Magma"; did you mean "magma"?
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/34470/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/40509/ : FAILURE

Compile error at C:/Jenkins/workspace/kv_engine-windows-master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-memory-tracking-proxy.cc(122): error C2653: "Magma": is not a class or namespace name ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/40509/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/12923/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-memory-tracking-proxy.cc:122:40: error: no type named "GetOperation" in namespace "magma"; did you mean "magma::Magma::GetOperation"? [clang-diagnostic-error]
                                 const Magma::GetOperation& op,
                                       ^~~~~~~~~~~~~~~~~~~
                                       magma::Magma::GetOperation
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/magma/include/libmagma/magma.h:1261:15: note: "magma::Magma::GetOperation" declared here
struct Magma::GetOperation {
              ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-memory-tracking-proxy.cc:122:40: error: use of undeclared identifier "Magma"; did you mean "magma"? [clang-diagnostic-error]
                                 const Magma::GetOperation& op,
                                       ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/magma/include/libmagma/magma.h:40:11: note: "magma" declared here
namespace magma {
          ^
note: this fix will not be applied because it overlaps with another fix
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-memory-tracking-proxy.cc:123:40: error: unknown type name "Slice"; did you mean "magma::Slice"? [clang-diagnostic-error]
                                 const Slice& metaSlice,
                                       ^~~~~
                                       magma::Slice
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/magma/include/libmagma/slice.h:27:20: note: "magma::Slice" declared here
class LIBMAGMA_API Slice {
                   ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-memory-tracking-proxy.cc:124:40: error: unknown type name "Slice"; did you mean "magma::Slice"? [clang-diagnostic-error]
                                 const Slice& valueSlice) {
                                       ^~~~~
                                       magma::Slice
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/magma/include/libmagma/slice.h:27:20: note: "magma::Slice" declared here
class LIBMAGMA_API Slice {
                   ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-memory-tracking-proxy.cc:271:46: error: unknown type name "Slice"; did you mean "magma::Slice"? [clang-diagnostic-error]
    auto wrappedCallback = [&callback](const Slice& keySlice,
                                             ^~~~~
                                             magma::Slice
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/magma/include/libmagma/slice.h:27:20: note: "magma::Slice" declared here
class LIBMAGMA_API Slice {
                   ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-memory-tracking-proxy.cc:273:46: error: unknown type name "Slice"; did you mean "magma::Slice"? [clang-diagnostic-error]
                                       const Slice& metaSlice) {
                                             ^~~~~
                                             magma::Slice
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/magma/include/libmagma/slice.h:27:20: note: "magma::Slice" declared here
class LIBMAGMA_API Slice {
                   ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-memory-tracking-proxy.cc:319:51: error: no type named "WriteOperation" in namespace "magma"; did you mean "magma::Magma::WriteOperation"? [clang-diagnostic-error]
        wrappedDocCallback = [&docCallback](const Magma::WriteOperation& op,
                                                  ^~~~~~~~~~~~~~~~~~~~~
                                                  magma::Magma::WriteOperation
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/magma/include/libmagma/magma.h:1277:15: note: "magma::Magma::WriteOperation" declared here
struct Magma::WriteOperation {
              ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-memory-tracking-proxy.cc:319:51: error: use of undeclared identifier "Magma"; did you mean "magma"? [clang-diagnostic-error]
        wrappedDocCallback = [&docCallback](const Magma::WriteOperation& op,
                                                  ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/magma/include/libmagma/magma.h:40:11: note: "magma" declared here
namespace magma {
          ^
note: this fix will not be applied because it overlaps with another fix

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/12923/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-memory-tracking-proxy.cc:122:40:
error: no type named "GetOperation" in namespace "magma"; did you mean "magma::Magma::GetOperation"? [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/12923/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/2588/ : FAILURE

Compile error at [2021-09-28T12:17:58.094Z] /home/couchbase/jenkins/workspace/kv_engine.aarch64-linux_master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-memory-tracking-proxy.cc:122:40:
error: ?Magma? does not name a type; did you mean ?magma??
 ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/2588/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/15339/ : FAILURE

Compile error at [2021-09-28T12:16:25.145Z] /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-memory-tracking-proxy.cc:122:40:
error: use of undeclared identifier "Magma"; did you mean "magma"?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/15339/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/14795/ : FAILURE

Compile error at [2021-09-28T12:16:59.501Z] /home/couchbase/jenkins/workspace/kv_engine.linux_master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-memory-tracking-proxy.cc:122:40:
error: ?Magma? does not name a type; did you mean ?magma??
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/14795/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/11713/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/13679/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/2554/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/14531/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/22807/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
